<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Forms.ActCadCliente"
    tools:showIn="@layout/act_cad_cliente">

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/lbl_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtNome"
        app:layout_constraintStart_toStartOf="@+id/txtNome"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_endereco"
        app:layout_constraintEnd_toEndOf="@+id/editNome"
        app:layout_constraintStart_toStartOf="@+id/editNome"
        app:layout_constraintTop_toBottomOf="@+id/editNome" />

    <EditText
        android:id="@+id/editEdereco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtEndereco"
        app:layout_constraintStart_toStartOf="@+id/txtEndereco"
        app:layout_constraintTop_toBottomOf="@+id/txtEndereco" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_email"
        app:layout_constraintEnd_toEndOf="@+id/editEdereco"
        app:layout_constraintStart_toStartOf="@+id/editEdereco"
        app:layout_constraintTop_toBottomOf="@+id/editEdereco" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_telefone"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editiTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/txtTelefone"
        app:layout_constraintStart_toStartOf="@+id/txtTelefone"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />

    <Button
        android:id="@+id/buttonSalvarCliente"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="Salvar"
        app:layout_constraintStart_toStartOf="@+id/editiTelefone"
        app:layout_constraintTop_toBottomOf="@+id/editiTelefone"
        android:onClick="salvarCliente"/>

    <Button
        android:id="@+id/buttonExcluirCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="excluirCliete"
        android:text="Excluir"
        app:layout_constraintStart_toEndOf="@+id/buttonSalvarCliente"
        app:layout_constraintTop_toBottomOf="@+id/editiTelefone" />
</android.support.constraint.ConstraintLayout>