<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Forms.EditarFinanceiroActivity"
    tools:showIn="@layout/activity_editar_financeiro">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Produto:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerProdutoFinanceiro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView33"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Tipo de transação:"
        app:layout_constraintEnd_toEndOf="@+id/spinnerProdutoFinanceiro"
        app:layout_constraintStart_toStartOf="@+id/spinnerProdutoFinanceiro"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProdutoFinanceiro" />

    <Spinner
        android:id="@+id/spinnerEntradaFinanceiro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView34"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Valor:"
        app:layout_constraintEnd_toEndOf="@+id/spinnerEntradaFinanceiro"
        app:layout_constraintStart_toStartOf="@+id/spinnerEntradaFinanceiro"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEntradaFinanceiro" />

    <EditText
        android:id="@+id/editTextValorFinanceiro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Observação:"
        app:layout_constraintEnd_toEndOf="@+id/editTextValorFinanceiro"
        app:layout_constraintStart_toStartOf="@+id/editTextValorFinanceiro"
        app:layout_constraintTop_toBottomOf="@+id/editTextValorFinanceiro" />

    <EditText
        android:id="@+id/editTextDetalheFinanceiro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Button
        android:id="@+id/buttonSalavarFinanceiro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="salvarFinanceiro"
        android:text="@string/str_Salvar"
        app:layout_constraintStart_toStartOf="@+id/editTextDetalheFinanceiro"
        app:layout_constraintTop_toBottomOf="@+id/editTextDetalheFinanceiro" />

    <Button
        android:id="@+id/buttonExcluirFinanceiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="excluirIncubatorio"
        android:text="@string/str_Excluir"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/editTextDetalheFinanceiro" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="voltarMenu"
        android:text="@string/voltar"
        app:layout_constraintStart_toEndOf="@+id/buttonSalavarFinanceiro"
        app:layout_constraintTop_toBottomOf="@+id/editTextDetalheFinanceiro" />

</android.support.constraint.ConstraintLayout>