<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Forms.EditarRacoesActivity"
    tools:showIn="@layout/activity_editar_racoes">

    <TextView
        android:id="@+id/textView324"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Tipo:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTipoRacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView324"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView324"
        app:layout_constraintTop_toBottomOf="@+id/textView324" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Quantidade (Kg):"
        app:layout_constraintEnd_toEndOf="@+id/editTextTipoRacao"
        app:layout_constraintStart_toStartOf="@+id/editTextTipoRacao"
        app:layout_constraintTop_toBottomOf="@+id/editTextTipoRacao" />

    <EditText
        android:id="@+id/editTextQuantidadeRacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/textView29"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Data:"
        app:layout_constraintEnd_toEndOf="@+id/editTextQuantidadeRacao"
        app:layout_constraintStart_toStartOf="@+id/editTextQuantidadeRacao"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantidadeRacao" />

    <EditText
        android:id="@+id/editTextDataRacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <Button
        android:id="@+id/buttonSalvarRacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="salvarRacao"
        android:text="@string/str_Salvar"
        app:layout_constraintStart_toStartOf="@+id/spinnerRacaoCorte"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRacaoCorte" />

    <Button
        android:id="@+id/buttonExcluirRacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="excluirRacao"
        android:text="@string/str_Excluir"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRacaoCorte" />

    <Button
        android:id="@+id/button19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="voltarMenu"
        android:text="@string/voltar"
        app:layout_constraintStart_toEndOf="@+id/buttonSalvarRacao"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRacaoCorte" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Código postura:"
        app:layout_constraintEnd_toEndOf="@+id/editTextDataRacao"
        app:layout_constraintStart_toStartOf="@+id/editTextDataRacao"
        app:layout_constraintTop_toBottomOf="@+id/editTextDataRacao" />

    <Spinner
        android:id="@+id/spinnerRacaoPostura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Spinner
        android:id="@+id/spinnerRacaoCorte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Código corte:"
        app:layout_constraintEnd_toEndOf="@+id/spinnerRacaoPostura"
        app:layout_constraintStart_toStartOf="@+id/spinnerRacaoPostura"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRacaoPostura" />
</android.support.constraint.ConstraintLayout>